--- a/stage-zero/style.css
+++ b/stage-zero/style.css
@@ -36,7 +36,7 @@ body {
 .profile-info {
     background-color: rgb(228, 225, 225);
     /* background-color:pink; */
-    padding: 1rem;
+    padding: 1.5rem;
     display: flex;
     color: black;
     flex-direction: column;
@@ -51,7 +51,7 @@ body {
 
 
 
-    /* height: 0rem; */
+    height: 8rem;
 
 }
 
@@ -128,7 +128,7 @@ img{
 
 .profile-bio {
     position: absolute;
-    top: 40%;
+    top: 10%;
     left: 15%;
     text-align: center;
 
@@ -186,9 +186,13 @@ img{
     }
 
     .icon {
-        width: 3rem;
-        height: 3rem;
+        width: 1rem;
+        height: 1rem;
     }
+    .shortBio{
+        display: none;
+    }
+    
 
     
 }
